--- a/src/ws_clpe/src/canlab-co/clpe_ros/CMakeLists.txt
+++ b/src/ws_clpe/src/canlab-co/clpe_ros/CMakeLists.txt
@@ -9,24 +9,31 @@ find_package(catkin REQUIRED)
 find_package(clpe REQUIRED)
 find_package(roscpp REQUIRED)
 find_package(image_transport REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(clpe_ros_msgs REQUIRED)
 
-catkin_package(DEPENDS roscpp image_transport)
+catkin_package(DEPENDS roscpp image_transport clpe_ros_msgs)
 
 add_library(${PROJECT_NAME}_lib INTERFACE)
 target_include_directories(${PROJECT_NAME}_lib INTERFACE
   ${roscpp_INCLUDE_DIRS}
+  ${geometry_msgs_INCLUDE_DIRS}
   ${sensor_msgs_INCLUDE_DIRS}
   ${image_transport_INCLUDE_DIRS}
   ${cv_bridge_INCLUDE_DIRS}
+  ${clpe_ros_msgs_INCLUDE_DIRS}
 )
 target_link_libraries(${PROJECT_NAME}_lib INTERFACE
   clpe
   ${roscpp_LIBRARIES}
+  ${geometry_msgs_LIBRARIES}
   ${sensor_msgs_LIBRARIES}
   ${image_transport_LIBRARIES}
   ${cv_bridge_LIBRARIES}
+  ${clpe_ros_msgs_LIBRARIES}
 )
 target_compile_features(${PROJECT_NAME}_lib INTERFACE cxx_std_14)
 
